--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,8 @@
 p, h1, h2, h4, h5,h6{
-    font-family: 'Roboto', sans-serif;
+    font-family: "Cabin",'Roboto', sans-serif;
+}
+.full_height{
+    height: 100%
 }
 .header{
     background-image: url(/img/1249221139.jpg);
