--- a/css/app.css
+++ b/css/app.css
@@ -1,17 +1,18 @@
 p, h1, h2, h4, h5,h6{
     font-family: "Cabin",'Roboto', sans-serif;
+
 }
 .full_height{
-    height: 100%
+    height: 90%
 }
 .header{
     background-image: url(/img/1249221139.jpg);
     background-position: center;
     background-size: cover;
-    padding: 5em
+    padding: 10em
 }
 .overlay{
-    background-color: black;
+    background-color: purple;
     opacity: 0.9;
     color: white
 }
